@@ -1,0 +1,3 @@
+name = "jack"
+hobby = "$[name] love to play poker"
+city  = "$[name] live in montreal"
